--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,22 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-    - name: Build and Push Docker Image
-      uses: mr-smithers-excellent/docker-build-push@v4
-      with:
-        image: sakshamgoyal3381/test
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+    -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+    -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+    -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: sakshamgoyal3381/test
          
